[project]
name = "py_package"
version = "0.0.1"
authors = [
  { name="Dipen Parmar", email="dipensavji@gmail.com" },
]

description = "A small example package, Designed for testing and learning, aimed at enhancing our workflow for increased efficiency"
readme = "README.md"
requires-python = ">=3.7"


[project.urls]
Homepage = "https://github.com/dipenparmar12/py_package"
Issues = "https://github.com/dipenparmar12/py_package/issues"
Documentation = "https://github.com/pypa/packaging.python.org/blob/main/source/tutorials/packaging-projects.rst"

[build-system]
requires = [
    "setuptools>=42",
    "wheel"
]
build-backend = "setuptools.build_meta"