[metadata]
name = py_package
description = My first Python package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/dipenparmar12/dpn_py_package
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[files]
packages = py_package

[options]
python_requires = >=3.7
